--- a/percy.css
+++ b/percy.css
@@ -42,8 +42,15 @@ body, html {
 	margin: auto;	
 }
 
+.controls-container {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+
 .canvas {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 }
 
